--- a/src/components/BackButton/BackButtonWhite.css
+++ b/src/components/BackButton/BackButtonWhite.css
@@ -23,3 +23,9 @@
   margin-left: 25px;
   color: white;
 }
+
+@media (max-width: 1024px) {
+  .back__button--white {
+    margin-left: 20px;
+  }
+}
